## GC configuration.
-XX:+UseConcMarkSweepGC
-XX:CMSInitiatingOccupancyFraction=75
-XX:+UseCMSInitiatingOccupancyOnly

# Disable calls to System#gc.
-XX:+DisableExplicitGC

# Pre-touch memory pages used by the JVM during initialization.
-XX:+AlwaysPreTouch

# Explicitly set the stack size.
-Xss1m

# Set to headless, just in case.
-Djava.awt.headless=true

# Ensure UTF-8 encoding by default (e.g. filenames).
-Dfile.encoding=UTF-8

# Use our provided JNA always versus the system one.
-Djna.nosys=true

# Use old-style file permissions on JDK9.
-Djdk.io.permissionsUseCanonicalPath=true

# Flags to keep Netty from being unsafe.
-Dio.netty.noUnsafe=true
-Dio.netty.noKeySetOptimization=true

# Log4j setup.
-Dlog4j.shutdownHookEnabled=false
-Dlog4j2.disable.jmx=true
-Dlog4j.skipJansi=true

# Make missing values in Painless scripts throw an exception.
-Des.scripting.exception_for_missing_value=true
